some initial modifications

--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
             <li>
               <a href="#education"> <span>Education</span></a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#experience"> <span>Experience</span></a>
-            </li>
+            </li> -->
             <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-            <li>
+            <!-- <li>
               <a href="#portfolio"> <span>Projects</span></a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
               <a href="#skills"> <span>Skills</span></a>
-            </li>
+            </li> -->
             <li>
               <a
                 href="https://drive.google.com/file/d/1Pb2Dj_aN32xXg4lk94lx2_x_FtP1avYX/view?usp=drive_link"
@@ -156,12 +156,36 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p>
-              Focused and enthusiastic developer with a keen interest in
-              software development and artificial intelligence. By comprehensive
-              exposure to the underlying concepts and applying them vividly to
-              various projects, my love for these domains came into being. I am
-              a passionate individual who thrives to build and apply algorithms
-              to solve real-world industry problems.
+              I'm a junior software engineer specializing in scalable web
+              development, with a particular focus on the .NET stack. My
+              expertise lies in backend programming and database management,
+              where I excel at creating efficient and secure systems. I'm also
+              highly interested in cloud and network technologies, and I enjoy
+              leveraging platforms like Azure and AWS to build robust
+              applications.
+            </p>
+            <p>
+              Proficient in languages such as C#, JS, and Python, I prioritize
+              building scalable RESTful APIs that deliver optimal performance. I
+              have hands-on experience with Microsoft SQL Server and possess a
+              deep understanding of database design and optimization. Seamlessly
+              integrating applications with databases using tools like Entity
+              Framework is one of my core strengths.
+            </p>
+            <p>
+              Beyond the .NET stack, I'm adaptable to other frameworks like
+              FastAPI and Node JS, enabling me to work effectively in diverse
+              programming environments. I'm constantly seeking opportunities for
+              learning and growth, and I value collaboration, teamwork, and open
+              communication. Working alongside experienced professionals to
+              contribute to a dynamic tech team is something I'm passionate
+              about.
+            </p>
+            <p>
+              In summary, as a junior software engineer with a focus on scalable
+              web development, expertise in backend programming and database
+              management, and an interest in cloud and network technologies, I'm
+              excited to contribute my skills and continue honing my craft.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -284,10 +308,10 @@
               />
               <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
               <p style="text-align: left; color: #fff; padding: 5px 10px">
-                <em>MS in Computer Science</em>
+                <em>B. in Computer Engineering</em>
               </p>
               <h5 style="text-align: left; padding: 0px 10px">
-                Janurary 2021 - Present
+                September 2017 - july 2022
               </h5>
               <h6 style="text-align: left; color: #fff; padding: 0px 10px">
                 Relevant Coursework
@@ -296,36 +320,6 @@
                 <li>Distributed Database Systems</li>
                 <li>Cloud Computing</li>
                 <li>Foundation Of Algorithms</li>
-              </ul>
-            </div>
-            <div
-              class="col-md-4 mt-4 mt-md-0 icon-box"
-              data-aos="fade-up"
-              data-aos-delay="100"
-              style="
-                padding: 0px 0px;
-                padding-bottom: 5px;
-                display: inline-block;
-              "
-            >
-              <img src="assets/img/education/au.png" class="img-fluid" alt="" />
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align: left; color: #fff; padding: 5px 10px">
-                <em>B.Tech. in Information and Communication Technology</em>
-              </p>
-              <h5 style="text-align: left; padding: 0px 10px">
-                July 2014 - May 2018
-              </h5>
-              <h6 style="text-align: left; color: #fff; padding: 0px 10px">
-                Relevant Coursework
-              </h6>
-              <ul style="text-align: left; color: #fff">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
-                <!-- <li>Computer Vision</li> -->
               </ul>
             </div>
           </div>
@@ -348,21 +342,10 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/certification/stanford.jpg"
+                  src="assets/img/certification/cloud-dev.png"
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
-                  <h4>Machine Learning</h4>
-                  <div class="portfolio-links">
-                    <a
-                      href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/"
-                      target="_blank"
-                      title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -372,21 +355,10 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/certification/stanford.jpg"
+                  src="assets/img/certification/native.png"
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
-                  <h4>Algorithms-Design and Analysis</h4>
-                  <div class="portfolio-links">
-                    <a
-                      href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate"
-                      target="_blank"
-                      title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -396,87 +368,10 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/certification/ucsd.jpg"
+                  src="assets/img/certification/DevOps.jpg"
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
-                  <h4>Algorithmic Toolbox</h4>
-                  <div class="portfolio-links">
-                    <a
-                      href="https://coursera.org/share/98bbfb990484fac370d5e5ed14334ea4"
-                      target="_blank"
-                      title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 portfolio-item filter-project"
-              style="position: absolute; left: 0px; top: 218.875px"
-            >
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/certification/ibm.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Deep Learning with Tensorflow</h4>
-                  <div class="portfolio-links">
-                    <a href="" target="_blank" title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 portfolio-item filter-project"
-              style="position: absolute; left: 370px; top: 218.875px"
-            >
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/certification/ibm.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Machine Learning with Python</h4>
-                  <div class="portfolio-links">
-                    <a href="" target="_blank" title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 portfolio-item filter-project"
-              style="position: absolute; left: 740px; top: 218.875px"
-            >
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/certification/dai.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Neural Networks and Deep Learning</h4>
-                  <div class="portfolio-links">
-                    <a
-                      href="https://www.coursera.org/account/accomplishments/certificate/ELXZ6FE2BU7X?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/"
-                      target="_blank"
-                      title="Certificate"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -1139,7 +1034,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script type="text/javascript">
       var typed = new Typed(".typing", {
-        strings: ["Coder", "Developer", "AI Enthusiast"],
+        strings: ["Software Engineer"],
         loop: true,
         typeSpeed: 65,
         backSpeed: 65,
