--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </li> -->
             <li>
               <a
-                href="https://drive.google.com/file/d/1Pb2Dj_aN32xXg4lk94lx2_x_FtP1avYX/view?usp=drive_link"
+                href="https://drive.google.com/file/d/1h8Hoc0Y71To9NQ5ALez-HaAgoO90y6tz/view?usp=sharing"
                 target="_blank"
               >
                 <span>Resume</span></a
